--- a/ITUniversity.Task.Web/Views/Task/Create.cshtml
+++ b/ITUniversity.Task.Web/Views/Task/Create.cshtml
@@ -1,7 +1,24 @@
 ﻿@using ITUniversity.Task.Entities
 
-@model ICollection<TaskBase>
+@model TaskBase
 
 @{
     ViewData["title"] = "Создание задачи";
 }
+
+    <div class="row">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Subject" class="control-label"></label>
+                <input asp-for="Subject" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <textarea asp-for="Description" class="form-control"></textarea>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
