--- a/ITUniversity.Task.Web/Views/Task/Create.cshtml
+++ b/ITUniversity.Task.Web/Views/Task/Create.cshtml
@@ -18,7 +18,8 @@
                 <textarea asp-for="Description" class="form-control"></textarea>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <button asp-controller="Task" asp-action="Create" class="btn btn-success">Create</button>
             </div>
+            <button asp-controller="Task" asp-action="Index" class="btn btn-danger">Отмена</button>
         </form>
     </div>
