--- a/ITUniversity.Task.Web/wwwroot/css/site.css
+++ b/ITUniversity.Task.Web/wwwroot/css/site.css
@@ -69,3 +69,15 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.field-validation-error{
+    color:red;
+}
+
+.field-validation-valid{
+    display:none;
+}
+
+input.input-validation-error{
+    border: 1px solid #b94a48;
+}
