--- a/ITUniversity.Task.Web/Views/Task/Create.cshtml
+++ b/ITUniversity.Task.Web/Views/Task/Create.cshtml
@@ -3,7 +3,7 @@
 @model TaskCreateModel
 
 @{
-    ViewData["title"] = "Создание задачи";
+    ViewData["title"] = "Create task";
 }
     <div class="card">
         <div class="card-header">
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group">
                     <button asp-controller="Task" asp-action="Create" class="btn btn-success">Create</button>
-                    <a asp-controller="Task" asp-action="Index" class="btn btn-danger">Отмена</a>
+                    <a asp-controller="Task" asp-action="Index" class="btn btn-danger">Cancel</a>
                 </div>
             </form>
         </div>
