--- a/ITUniversity.Tasks.Web/Views/Task/Edit.cshtml
+++ b/ITUniversity.Tasks.Web/Views/Task/Edit.cshtml
@@ -10,6 +10,7 @@
         @using (Html.BeginForm("Edit", "Task"))
         {
             @Html.HiddenFor(model => model.Id)
+            @Html.HiddenFor(model => model.CreationDate)
             @Html.HiddenFor(model => model.Subject)
 
             <div class="form-group">
