--- a/ITUniversity.Tasks.Web/Views/Shared/_Layout.cshtml
+++ b/ITUniversity.Tasks.Web/Views/Shared/_Layout.cshtml
@@ -20,16 +20,17 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            @Html.ActionLink("Пользователи", "Index", "User", null, new { @class = "nav-link text-dark" })
                         </li>
                         <li class="nav-item">
                             @Html.ActionLink("Задачи", "Index", "Task", null, new { @class = "nav-link text-dark" })
                         </li>
                     </ul>
                 </div>
+                <a href="@Url.Action("Logout", "Account")" class="btn btn-outline-info">Выйти</a>
             </div>
         </nav>
     </header>
