--- a/ITUniversity.Tasks.Web/Views/User/Index.cshtml
+++ b/ITUniversity.Tasks.Web/Views/User/Index.cshtml
@@ -3,12 +3,12 @@
 @model ICollection<UserDto>
 
 @{
-    ViewData["Title"] = "Список пользлователей";
+    ViewData["Title"] = "Список пользователей";
 }
 
 <div class="card">
     <div class="card-header">
-        Список пользлователей
+        Список пользователей
     </div>
     <div class="card-body">
         <table class="table table-borderless">
@@ -19,12 +19,18 @@
                         <div class="card">
                             <div class="card-body">
                                 <div style="display: flex">
-                                    <h5 style="display: flex; margin-bottom: 0px;" >
-                                            @user.Login
+                                    <h5 style="display: flex; margin-bottom: 0px;">
+                                        @user.Login
                                     </h5>
                                     <div style="width: 100%;">
-                                        <span class="material-icons" style="float: right; cursor: pointer; color: red;" onclick="user.block('@user.Id', this)">
-                                            lock
+                                        <a class="material-icons" style="float: right;" href="@Url.Action("Edit", "User", new { id = user.Id })">
+                                            edit
+                                        </a>
+                                        <span class="material-icons"
+                                              style="float: right; cursor: pointer; color: red;"
+                                              onclick="user.block('@user.Id', this);"
+                                              title="Заблокировать пользователя">
+                                            block
                                         </span>
                                     </div>
                                 </div>
