--- a/ITUniversity.Tasks.Web/Views/Task/Add.cshtml
+++ b/ITUniversity.Tasks.Web/Views/Task/Add.cshtml
@@ -2,8 +2,9 @@
 
 @model TaskCreateModel
 
-@{ 
+@{
     const string formId = "task_create_form";
+    var returnUrl = Url.Action("Index", "Task");
 }
 
 <div class="card">
@@ -22,40 +23,15 @@
                 @Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
             </div>
 
-            <input type="button" class="btn btn-success" value="Сохранить" onclick="save('@(formId)')">
-            <a class="btn btn-danger" href="@Url.Action("Index", "Task")">Отмена</a>
+            <input type="button" class="btn btn-success" value="Сохранить" onclick="task.create('@(formId)', '@(returnUrl)');">
+            <a class="btn btn-danger" href="@returnUrl">Отмена</a>
         </form>
     </div>
 </div>
 
-<script type="text/javascript">
-    function save(formId) {
-        debugger;
-        var postData = objectifyForm(formId);
-        $.ajax({
-            url: "/api/services/task/create",
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            method: "POST",
-            data: JSON.stringify(postData),
-            success: function () {
-                window.location.href = "/Task/Index";
-            }
-        });
-    }
-    function objectifyForm(formId) {
-        var form = $('#' + formId);
-        var formArray = form.serializeArray();
-        var formObject = {};
-        for (var i = 0; i < formArray.length; i++) {
-            formObject[formArray[i]['name']] = formArray[i]['value'];
-        }
-        return formObject;
-    }
-</script>
-
 @section scripts
 {
+    <script src="~/view-resources/task/scripts.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
